Fixed searching for new series shifting during search

--- a/frontend/src/AddSeries/AddNewSeries/AddNewSeries.less
+++ b/frontend/src/AddSeries/AddNewSeries/AddNewSeries.less
@@ -101,7 +101,7 @@
   }
 
 
-  &.loading {
+  &.state-loading {
     .spinner-container {
       opacity: 1;
     }
